# fraud-detection-ms

./: Dockerfile  README.md  pyproject.toml
src/: controllers.py  main.py  models.py  services.py  utils.py
src/ml_model/: fraud_detection_model.pkl  preprocessor.pkl
